--- a/locales/en.json
+++ b/locales/en.json
@@ -5,6 +5,7 @@
 			"title": "Finding device...",
 			"error": "An error has occurred.",
       "required": "IP address is a required value.",
+			"invalidIP": "Please enter a valid IPv4 address, e.g. 192.168.1.10",
       "ipAddress": "IP address",
 			"deviceName": "Device name",
       "saveSettings": "Save settings",
